tests/NormalTests/paczka1/small_fuzzy/91555881.err
Error in line 2: A966 A656 42,5
Error in line 1: yTkTR6BqQVa A656 27,3
Error in line 3: A966 A966 24,3
Error in line 4: yTkTR6BqQVa A6 30,5
Error in line 10: jenincZry2B A966 5,3
Error in line 13: jenincZry2B A656 29,9
